@@ -2,6 +2,7 @@
 =======================
 - fix undefined authtype_requires_creds err if ldap enabled but without sasl.
 - fix master map type check.
+- fix task manager not getting signaled.
 
 17/10/2013 autofs-5.0.8
 =======================
